<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CriarListaActivity">

    <TextView
        android:id="@+id/txt_nova_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nova_lista"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"/>
    <TextView
        android:id="@+id/edt_id_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edt_nome_lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:autofillHints="name"
        android:hint="@string/qual_ser_o_nome_da_lista"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@id/txt_nova_lista"
        app:layout_constraintTop_toBottomOf="@id/txt_nova_lista"/>


    <Button
        android:id="@+id/btn_criar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar"
        android:background="@drawable/borda_arredondada"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="60dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>